--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,26 @@
             width: 100vw;
         }
     </style>
+    <script>
+        // add Matomo web stats
+        if (location.hostname === 'pk.auth.demo.teqfw.com') {
+            let _paq = window._paq = window._paq || [];
+            /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+            _paq.push(['trackPageView']);
+            _paq.push(['enableLinkTracking']);
+            (function () {
+                let u = '//matomo.service.wiredgeese.com/';
+                _paq.push(['setTrackerUrl', u + 'matomo.php']);
+                _paq.push(['setSiteId', '5']);
+                let d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+                g.async = true;
+                g.src = u + 'matomo.js';
+                s.parentNode.insertBefore(g, s);
+            })();
+        }
+    </script>
     <script type="module">
+        // launch TeqFW front app
         self.addEventListener('load', async () => {
             // VARS
             const urlSw = null;
